Fix size issue on mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 :host {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 
   .viewer,
   .sidenav {
@@ -10,7 +10,7 @@
   .viewer {
     position: fixed;
     width: calc(100% - 480px);
-    height: 100vh;
+    height: 100%;
     left: 0;
     background: black;
   }
@@ -18,7 +18,7 @@
   .sidenav {
     position: absolute;
     width: 480px;
-    min-height: 100vh;
+    min-height: 100%;
     right: 0;
     overflow-x: hidden;
     text-align: center;
